added optional link to website for projects

--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -1,32 +1,57 @@
 {"projects":[
+    {"position":"Web developer",
+        "name":"JobDevFeed",
+        "description":"JobDevFeed is a very unique Job searching website that connects to Github's job API. it provides an easy and dynamic way to search for exclusive jobs, and it does not require user sign-up or login",
+        "image":"../../assets/jobdevfeed.png",
+        "link":"https://github.com/dannycerongarcia/jobdevfeed",
+        "webLink":"http://jobdevfeed.xyz/",
+        "world":"🌎"},
     {"position":"Android Developer",
         "name":"SHAREOUT",
         "description":"SHAREOUT is best app for sharing expneses. Shareout allow users to keep detail information of expenses between group bills, and provides very easy and playful interfeace to keep track of group's memeber owed amount. Contact me for to (private code). ",
         "image":"../../assets/Shareout.png",
-        "link":"https://github.com/dannycerongarcia/shareout"},
+        "link":"https://github.com/dannycerongarcia/shareout",
+        "web-link":"",
+        "world":""},
     {"position":"Full Stack Web-dev","name":"ALGORITHMS QUIZ",
         "description":"ALGORITHS QUIZ, is meant to help programmers to keep their algorithms knowledge sharp. The Web application, allow users to create an account to take part on fun interactive quizes that help you learn the most used algorithms out there.",
-        "image":"../../assets/algorithms-quiz.png","link":"https://github.com/dannycerongarcia/algorithms-quiz"},
+        "image":"../../assets/algorithms-quiz.png","link":"https://github.com/dannycerongarcia/algorithms-quiz",
+        "web-link":"",
+        "world":""},
     {"position":"Front-end Developer","name":"Portfolio",
         "description":"This is a  responsive website potfoli that was design with the purpose of testing tools and services like, netlify web-hosting serive, and Buddy, a piping and testing tool for deployment.",
-        "image":"../../assets/Portfolio.png","link":"https://github.com/dannycerongarcia/my-website"},
+        "image":"../../assets/Portfolio.png","link":"https://github.com/dannycerongarcia/my-website",
+        "web-link":"",
+        "world":""},
     {"position":"Front-end Developer","name":"ThinkLfy",
         "description":"ThinkLfy privides insite and usful information about imporatant ussies of sustainability our generation is facing.",
-        "image":"../../assets/thinkLfy.png","link":"https://github.com/dannycerongarcia/ThinkLfy"},
+        "image":"../../assets/thinkLfy.png","link":"https://github.com/dannycerongarcia/ThinkLfy",
+        "web-link":"",
+        "world":""},
     {"position":"Sofware Developer","name":"TaxFri",
         "description":"Taxfri is a financial tool developed in python. It helps users to keep track of their comapny or work expenses for tax deduxtion. All data is stored in local CSV files which facilitates the use of the data for other purposes.",
-        "image":"../../assets/TaxFri.png","link":"https://github.com/dannycerongarcia/TaxFri"},
+        "image":"../../assets/TaxFri.png","link":"https://github.com/dannycerongarcia/TaxFri",
+        "web-link":"",
+        "world":""},
     {"position":"Sofware Developer","name":"equation_of_plane",
         "description":"Equaltion_of_plane is a python tool that can find a plane or surface in a 3D space. Potential use would in aero space engineering, this tool could help determine if an area is a prime landing site for rockets.",
-        "image":"../../assets/planeEQ.png","link":"https://github.com/dannycerongarcia/Plane-equations/blob/master/equation_of_plane.py"},
+        "image":"../../assets/planeEQ.png","link":"https://github.com/dannycerongarcia/Plane-equations/blob/master/equation_of_plane.py",
+        "web-link":"",
+        "world":""},
     {"position":"Computer engineer","name":"Self Driving Car",
         "description":"",
-        "image":"../../assets/self-d-car-c.jpg","link":"https://github.com/dannycerongarcia/Self-Driving-Car"},
+        "image":"../../assets/self-d-car-c.jpg","link":"https://github.com/dannycerongarcia/Self-Driving-Car",
+        "web-link":"",
+        "world":""},
     {"position":"Computer engineer","name":"Smart Car",
         "description":"",
-        "image":"../../assets/self-d-car-cpp.jpg","link":"https://github.com/dannycerongarcia/smart_carr"},
+        "image":"../../assets/self-d-car-cpp.jpg","link":"https://github.com/dannycerongarcia/smart_carr",
+        "web-link":"",
+        "world":""},
     {"position":"Computer engineer","name":"LCD-Thermometer",
         "description":"LDC-Thermometer is a device designed to read a room's tempareture and display the temperature in real time onto a LDC screen. The device was built using heat sensors, an aduino board, and a LCD screen.",
-        "image":"../../assets/thermometer-setup.JPG","link":"https://github.com/dannycerongarcia/Arduino_UNO_LCD_Thermometer"}
+        "image":"../../assets/thermometer-setup.JPG","link":"https://github.com/dannycerongarcia/Arduino_UNO_LCD_Thermometer",
+        "web-link":"",
+        "world":""}
     ]
 }
